RESOLVED FIXED144313
Fix windows build error in WebCore related to bulk build.
https://bugs.webkit.org/show_bug.cgi?id=144313
Summary Fix windows build error in WebCore related to bulk build.
Namhoon Kim
Reported 2015-04-27 22:05:40 PDT
Found this bug when I tried to test ENABLE_FONT_LOAD_EVENTS in windows. `dom/DOMError.cpp` and `css/CSSFontFaceLoadEvent.cpp` was missed in the `dom/DOMAllInOne.cpp`, `css/CSSAllInOne.cpp` bulk build index file respectively.
Attachments
Patch (1.73 KB, patch)
2015-04-27 22:08 PDT, Namhoon Kim
no flags
Patch (1.72 KB, patch)
2015-04-27 22:10 PDT, Namhoon Kim
no flags
Namhoon Kim
Comment 1 2015-04-27 22:08:46 PDT
Namhoon Kim
Comment 2 2015-04-27 22:10:43 PDT
Csaba Osztrogonác
Comment 3 2015-04-28 03:49:33 PDT
Comment on attachment 251824 [details] Patch rs=me
WebKit Commit Bot
Comment 4 2015-04-28 04:37:31 PDT
Comment on attachment 251824 [details] Patch Clearing flags on attachment: 251824 Committed r183466: <http://trac.webkit.org/changeset/183466>
WebKit Commit Bot
Comment 5 2015-04-28 04:37:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.