Fix windows build error in WebCore related to bulk build. https://bugs.webkit.org/show_bug.cgi?id=144313

Patch by Namhoon Kim <nakim@ea.com> on 2015-04-28
Reviewed by Csaba Osztrogonác.

No new tests because there is no behavior change.

* css/CSSAllInOne.cpp:
* dom/DOMAllInOne.cpp:

Canonical link: https://commits.webkit.org/162324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183466 268f45cc-cd09-0410-ab3c-d52691b4dbfc