Source/WebCore/css/CSSAllInOne.cpp
@@ -37,6 +37,7 @@
 #include "CSSDefaultStyleSheets.cpp"
 #include "CSSFilterImageValue.cpp"
 #include "CSSFontFace.cpp"
+#include "CSSFontFaceLoadEvent.cpp"
 #include "CSSFontFaceRule.cpp"
 #include "CSSFontFaceSource.cpp"
 #include "CSSFontFaceSrcValue.cpp"
